--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
-  "api": "json-server --watch db.json --port 4000"
-},
+  "homepage":"https://Raghavan258.github.io/IndianConstitutionProject",
 
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d dist",
+    "lint":"eslint",
+    "api": "json-server --watch db.json --port 4000"
+  },
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -23,6 +27,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "json-server": "^1.0.0-beta.3",
     "vite": "^7.2.4"
