--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
- 
 
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d dist",
-    "lint":"eslint",
-    "api": "json-server --watch db.json --port 4000"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "lint": "eslint ."
   },
+
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6"
   },
+
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
@@ -29,7 +29,6 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
-    "json-server": "^1.0.0-beta.3",
     "vite": "^7.2.4"
   }
 }
